@@ -428,6 +428,7 @@ server.php?action=end_rob_house&user_id=[id number]
                                &sequence_number=[number]
                                &ticket_hmac=[hmac-sha1, hex-encoded]
                                &success=[0(die) or 1(hit vault) or 2(leave)]
+                               &wife_killed_robber=[0(false) or 1(true)]
 							   &wife_killed=[0(false) or 1(true)]
                                &wife_robbed=[0(false) or 1(true)]
 							   &any_family_killed=[0(false) or 1(true)]
